Add some ideas on Layout

--- a/vizro-ai/examples/langchain_develop_retry.ipynb
+++ b/vizro-ai/examples/langchain_develop_retry.ipynb
@@ -5,8 +5,8 @@
    "id": "5999ceb3-7621-4121-85a2-a9766c593807",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-22T08:42:48.418179Z",
-     "start_time": "2024-05-22T08:42:48.386216Z"
+     "end_time": "2024-05-24T12:59:43.266976Z",
+     "start_time": "2024-05-24T12:59:43.246745Z"
     }
    },
    "source": [
@@ -33,8 +33,8 @@
    "id": "8ef5d1e2-6246-4771-85bf-890c343e5fa2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-22T08:44:50.136370Z",
-     "start_time": "2024-05-22T08:44:50.064696Z"
+     "end_time": "2024-05-24T12:59:46.370962Z",
+     "start_time": "2024-05-24T12:59:43.268123Z"
     }
    },
    "source": [
@@ -49,15 +49,15 @@
     "from langchain_experimental.llms.ollama_functions import OllamaFunctions"
    ],
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 2
   },
   {
    "cell_type": "code",
    "id": "9573537f-dd35-4981-9bde-54842bdba020",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-22T08:42:51.171654Z",
-     "start_time": "2024-05-22T08:42:51.161944Z"
+     "end_time": "2024-05-24T12:59:46.378173Z",
+     "start_time": "2024-05-24T12:59:46.371620Z"
     }
    },
    "source": [
@@ -76,8 +76,8 @@
    "id": "1b21ea4a-979d-4099-bdd2-9fef98592042",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-22T08:42:51.176607Z",
-     "start_time": "2024-05-22T08:42:51.173956Z"
+     "end_time": "2024-05-24T12:59:46.380777Z",
+     "start_time": "2024-05-24T12:59:46.378883Z"
     }
    },
    "source": [
@@ -91,8 +91,8 @@
    "id": "df171406-64d3-4c73-96be-83e867ff862f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-22T08:42:51.417301Z",
-     "start_time": "2024-05-22T08:42:51.177891Z"
+     "end_time": "2024-05-24T12:59:46.598429Z",
+     "start_time": "2024-05-24T12:59:46.382550Z"
     }
    },
    "source": [
@@ -116,8 +116,8 @@
    "id": "04352436-ccb7-4d06-becb-b177acdbdfac",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-02T11:26:44.865996Z",
-     "start_time": "2024-05-02T11:26:43.976874Z"
+     "end_time": "2024-05-24T12:59:50.484508Z",
+     "start_time": "2024-05-24T12:59:46.599155Z"
     }
    },
    "source": [
@@ -207,12 +207,12 @@
    "id": "0295ba8a-0afb-48ff-bad4-3a929fdc7492",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-22T08:59:52.997086Z",
-     "start_time": "2024-05-22T08:59:52.994163Z"
+     "end_time": "2024-05-24T12:59:58.414251Z",
+     "start_time": "2024-05-24T12:59:58.394970Z"
     }
    },
    "source": [
-    "# model = ChatOpenAI(model =\"gpt-4-turbo\", temperature=0)\n",
+    "model = ChatOpenAI(model =\"gpt-4-turbo\", temperature=0)\n",
     "\n",
     "# model = ChatAnthropic(\n",
     "#     model='claude-3-opus-20240229',\n",
@@ -220,10 +220,10 @@
     "#     anthropic_api_url=os.environ.get(\"ANTHROPIC_BASE_URL\")\n",
     "# )\n",
     "\n",
-    "model = OllamaFunctions(model=\"phi3\", format=\"json\", temperature=0.3)"
+    "# model = OllamaFunctions(model=\"phi3\", format=\"json\", temperature=0.3)"
    ],
    "outputs": [],
-   "execution_count": 31
+   "execution_count": 7
   },
   {
    "cell_type": "markdown",
@@ -236,8 +236,8 @@
    "id": "07a80f76-f22a-4a87-9427-eac49afd2ac3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-02T14:00:59.626990Z",
-     "start_time": "2024-05-02T14:00:59.618949Z"
+     "end_time": "2024-05-24T13:00:10.187958Z",
+     "start_time": "2024-05-24T13:00:10.184797Z"
     }
    },
    "source": [
@@ -276,8 +276,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-02T13:54:55.631351Z",
-     "start_time": "2024-05-02T13:54:55.622043Z"
+     "end_time": "2024-05-24T13:00:11.213995Z",
+     "start_time": "2024-05-24T13:00:11.209668Z"
     }
    },
    "cell_type": "code",
@@ -295,13 +295,13 @@
    ],
    "id": "637463f13fc4c852",
    "outputs": [],
-   "execution_count": 65
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-02T13:55:02.544378Z",
-     "start_time": "2024-05-02T13:55:02.538132Z"
+     "end_time": "2024-05-24T13:00:12.682120Z",
+     "start_time": "2024-05-24T13:00:12.679452Z"
     }
    },
    "cell_type": "code",
@@ -311,26 +311,26 @@
    ],
    "id": "ca1a372460976ef8",
    "outputs": [],
-   "execution_count": 66
+   "execution_count": 10
   },
   {
    "cell_type": "code",
    "id": "5d10da9c-80d8-4d62-9cae-81f0a8a2b0b3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-02T13:55:04.871081Z",
-     "start_time": "2024-05-02T13:55:04.866449Z"
+     "end_time": "2024-05-24T13:00:13.316075Z",
+     "start_time": "2024-05-24T13:00:13.314224Z"
     }
    },
    "source": "query = \"What 5 actors who played in the movie Inception?\"\n",
    "outputs": [],
-   "execution_count": 67
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-02T13:56:10.887529Z",
-     "start_time": "2024-05-02T13:56:06.887623Z"
+     "end_time": "2024-05-24T13:00:19.570093Z",
+     "start_time": "2024-05-24T13:00:14.951978Z"
     }
    },
    "cell_type": "code",
@@ -341,14 +341,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/Maximilian_Schulz/Library/Application Support/hatch/env/virtual/vizro-ai/fZiNbsWT/vizro-ai/lib/python3.9/site-packages/pydantic/json_schema.py:2158: PydanticJsonSchemaWarning: Default value default=PydanticUndefined description='name of an actor' extra={} is not JSON serializable; excluding default from JSON schema [non-serializable-default]\n",
+      "/Users/Maximilian_Schulz/Library/Application Support/hatch/env/virtual/vizro-ai/EdwJfxPm/vizro-ai/lib/python3.12/site-packages/pydantic/json_schema.py:2158: PydanticJsonSchemaWarning: Default value default=PydanticUndefined description='name of an actor' extra={} is not JSON serializable; excluding default from JSON schema [non-serializable-default]\n",
       "  warnings.warn(message, PydanticJsonSchemaWarning)\n",
-      "/Users/Maximilian_Schulz/Library/Application Support/hatch/env/virtual/vizro-ai/fZiNbsWT/vizro-ai/lib/python3.9/site-packages/pydantic/json_schema.py:2158: PydanticJsonSchemaWarning: Default value default=PydanticUndefined description='Country they were born in' extra={} is not JSON serializable; excluding default from JSON schema [non-serializable-default]\n",
+      "/Users/Maximilian_Schulz/Library/Application Support/hatch/env/virtual/vizro-ai/EdwJfxPm/vizro-ai/lib/python3.12/site-packages/pydantic/json_schema.py:2158: PydanticJsonSchemaWarning: Default value default=PydanticUndefined description='Country they were born in' extra={} is not JSON serializable; excluding default from JSON schema [non-serializable-default]\n",
       "  warnings.warn(message, PydanticJsonSchemaWarning)\n"
      ]
     }
    ],
-   "execution_count": 70
+   "execution_count": 12
   },
   {
    "metadata": {
@@ -407,15 +407,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-02T14:00:41.147100Z",
-     "start_time": "2024-05-02T14:00:32.298094Z"
+     "end_time": "2024-05-24T13:02:05.428173Z",
+     "start_time": "2024-05-24T13:02:00.473618Z"
     }
    },
    "cell_type": "code",
    "source": "import vizro.models as vm",
    "id": "bd0bcdac9b7352b2",
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 15
   },
   {
    "metadata": {},
@@ -627,6 +627,131 @@
    "cell_type": "markdown",
    "source": "In summary, using Vizro models works generally well, but it struggle with more complex models such as Page, likely due to the sheer size of the schema, and thus the large number of validation errors.",
    "id": "3b8722e68c2e86ac"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Layout",
+   "id": "190770e76a2b3b0d"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-24T13:00:49.259179Z",
+     "start_time": "2024-05-24T13:00:49.256147Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "MODEL_PROMPT = \"Answer the user query. Remember to only respond with JSON.\\n{format_instructions}\\n{query}\\n\"\n",
+    "MODEL_REPROMPT = MODEL_PROMPT + \"Pay special attention to the following error\\n{validation_error}\\n\"\n",
+    "\n",
+    "def get_model(query: str, model, result_model: Union[BaseModel, BaseModelV1], max_retry: int = 3) -> BaseModel:\n",
+    "    parser = PydanticOutputParser(pydantic_object=result_model)\n",
+    "\n",
+    "    for i in range(max_retry):\n",
+    "        try:\n",
+    "            prompt = PromptTemplate(\n",
+    "                template=MODEL_PROMPT if i == 0 else MODEL_REPROMPT,\n",
+    "                input_variables=[\"query\"],\n",
+    "                partial_variables={\"format_instructions\": parser.get_format_instructions()},\n",
+    "            )\n",
+    "\n",
+    "            chain = prompt | model | parser\n",
+    "\n",
+    "            res = chain.invoke({\"query\": query}) if i == 0 else chain.invoke(\n",
+    "                {\"query\": query, \"validation_error\": str(validation_error)})\n",
+    "            return res\n",
+    "        except OutputParserException as e:\n",
+    "            validation_error = e\n",
+    "    return validation_error"
+   ],
+   "id": "c76ccde23336d50a",
+   "outputs": [],
+   "execution_count": 13
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-24T13:02:19.669002Z",
+     "start_time": "2024-05-24T13:02:19.666339Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "vm.Layout",
+   "id": "d677d91e055c67ea",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "vizro.models._layout.Layout"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 18
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-24T13:29:45.756405Z",
+     "start_time": "2024-05-24T13:29:45.754542Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "from typing import Optional",
+   "id": "b1c0a2e5eb6c36f8",
+   "outputs": [],
+   "execution_count": 29
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-24T13:29:46.729005Z",
+     "start_time": "2024-05-24T13:29:46.726602Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "class Layout(BaseModelV1):\n",
+    "    layout_description: Optional[str] = Field(...,\n",
+    "                                       description=\"Description of component layout.If possible, clearly refer to what component needs to be where on the page, like 'top' or 'botton' or 'left' or 'right'. Do not make up things not explicitly mentioned in the query. If no information, just return None.\")"
+   ],
+   "id": "b6e44fd65159d445",
+   "outputs": [],
+   "execution_count": 30
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-24T13:29:56.089529Z",
+     "start_time": "2024-05-24T13:29:48.669628Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "query = \"I need a page with a bar and a scatter that filters on the columns 'gdpPerCap` and uses a dropdown as selector. The two charts should be next to each other.\"\n",
+    "\n",
+    "res = get_model(query, model, result_model=Layout)\n",
+    "res"
+   ],
+   "id": "e34478f711b7ac29",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Layout(layout_description=\"Place the bar chart and the scatter chart next to each other horizontally. Include a dropdown selector above the charts for filtering based on the 'gdpPerCap' column.\")"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 31
   },
   {
    "metadata": {},
