--- a/vizro-ai/examples/example_dashboard_code.ipynb
+++ b/vizro-ai/examples/example_dashboard_code.ipynb
@@ -1,9 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
-   "id": "19271619-b3ab-4581-9469-4ae4778e5654",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2da5adc-0f0f-4800-a49b-afaf26cb6808",
    "metadata": {},
+   "outputs": [],
    "source": [
     "from langsmith import traceable"
    ]
@@ -22,12 +24,35 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "68f56ab2-3806-4352-9f66-da56aba66b01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.environ.get(\"ANTHROPIC_API_URL\")\n",
+    "os.environ.get(\"ANTHROPIC_BASE_URL\")\n",
+    "os.environ.get(\"ANTHROPIC_API_BASE\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "632a9013-6872-447d-936f-1dbcd1cc0f12",
    "metadata": {},
    "outputs": [],
    "source": [
     "from vizro_ai import VizroAI\n",
-    "vizro_ai = VizroAI()"
+    "vizro_ai = VizroAI(model=\"claude-3-sonnet-20240229\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "714e7274-d396-4d54-889a-3759fc915c4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vizro_ai.model"
    ]
   },
   {
@@ -180,9 +205,11 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "d3dba222-3089-4b2a-bbf7-89ee2ccca81d",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4ad51fa-1730-4082-a34e-87ab8184a786",
    "metadata": {},
+   "outputs": [],
    "source": [
     "user_question_2_data = \"\"\"\n",
     "I need a page with 2 tables.\n",
@@ -198,20 +225,24 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "c3fccacc-10d4-4f80-85fd-1aa30af4d1fe",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8680de28-6ad2-45fa-b68f-3ea7c5c3daea",
    "metadata": {},
+   "outputs": [],
    "source": [
     "@traceable\n",
     "def traced_dashboard():\n",
-    "    res = vizro_ai.dashboard([df, df_stocks], user_question_2_data)\n",
+    "    res = vizro_ai.dashboard([df, df_stocks], user_input=user_question_2_data)\n",
     "    return res"
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "b032128a-1605-4a1d-bc0b-caa4f7f03b4d",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08aeca92-db6d-4580-8d6c-f42e03016bca",
    "metadata": {},
+   "outputs": [],
    "source": [
     "traced_dashboard()"
    ]
