small improvement for 4o and remove run dashboard

--- a/vizro-ai/examples/example_dashboard.ipynb
+++ b/vizro-ai/examples/example_dashboard.ipynb
@@ -2,21 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "53e857ce-22bc-49de-9adc-9a2e7c9829cf",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from dotenv import load_dotenv\n",
     "load_dotenv()"
@@ -24,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "2a25acdd-20c3-4762-b97f-254de1586aeb",
    "metadata": {},
    "outputs": [],
@@ -36,12 +25,13 @@
     "from vizro_ai import VizroAI\n",
     "\n",
     "vizro_ai = VizroAI(model=\"gpt-4-turbo\")\n",
+    "# vizro_ai = VizroAI(model=\"gpt-4o\")\n",
     "# vizro_ai = VizroAI()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "b5e24f1b-e698-40e5-be00-c3a59c53ec65",
    "metadata": {},
    "outputs": [],
@@ -51,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "449da2ee-c754-420a-ba2e-c9b0ef62d934",
    "metadata": {},
    "outputs": [],
@@ -70,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6df428c5-28a3-49b6-bac9-f72ade4a34a4",
+   "id": "f73e32be-2a93-4546-9326-780f27c739a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,21 +88,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31c002d9-8103-43ef-9da5-78d9180075de",
+   "id": "fe646795-c6b7-4e78-9246-6ee4981e5493",
    "metadata": {},
    "outputs": [],
    "source": [
-    "res = vizro_ai.dashboard([df1, df2], user_question_2_data, return_elements=True)"
+    "dashboard = vizro_ai.dashboard([df1, df2], user_question_2_data)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9996286e-46b0-4a63-8273-5dd4b2a91cd0",
+   "id": "f11e7780-7dd3-4f24-ac71-a6af97bdf5aa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "vizro_ai.run_dashboard(res.dashboard, res.metadata)"
+    "Vizro().build(dashboard).run()"
    ]
   },
   {
@@ -124,17 +114,21 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "067983a0-65c6-48a2-85f3-a4d3db31977b",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b970db88-8b28-4395-893b-baf61a853b70",
    "metadata": {},
+   "outputs": [],
    "source": [
     "df3 = px.data.tips()"
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "50ccf0bc-0afe-433d-b541-1bbb41b0e7e7",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e8d7618-1be9-4c5f-812b-b3e56cf395b4",
    "metadata": {},
+   "outputs": [],
    "source": [
     "user_question_3_data = \"\"\"\n",
     "<Page 1>\n",
@@ -175,20 +169,24 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "a240b98d-229b-4ed2-8e4d-93de004c6283",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5dd2febd-daee-4aef-a4c3-a3aa801759cc",
    "metadata": {},
+   "outputs": [],
    "source": [
     "Vizro._reset()\n",
-    "res = vizro_ai.dashboard([df1, df2, df3], user_question_3_data, return_elements=True)"
+    "dashboard = vizro_ai.dashboard([df1, df2, df3], user_question_3_data)"
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "7930a7ee-7dff-467a-b888-21b4c502c585",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d928f50-16ca-4b41-addd-2bbceb7cd4e0",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "vizro_ai.run_dashboard(res.dashboard, res.metadata)"
+    "Vizro().build(dashboard).run()"
    ]
   },
   {
@@ -200,9 +198,11 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "c8c278d5-eb8b-4244-843b-92cf63e8866f",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b05af7bc-81a0-453b-a84c-55e76bf97ef7",
    "metadata": {},
+   "outputs": [],
    "source": [
     "user_question_2_data = \"\"\"\n",
     "<Page 1>\n",
@@ -236,20 +236,24 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "f338d294-ec84-49f1-b729-646b0b419108",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7fd3ec34-f07e-415c-b3ac-3849370a40c9",
    "metadata": {},
+   "outputs": [],
    "source": [
     "Vizro._reset()\n",
-    "res = vizro_ai.dashboard([df3, df2], user_question_2_data, return_elements=True)"
+    "dashboard = vizro_ai.dashboard([df3, df2, df1], user_question_2_data)"
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "4dbe8aae-f7ae-4a94-8bce-6a394faabcd4",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16bf518e-0488-4750-8a30-481c82cf6eee",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "vizro_ai.run_dashboard(res.dashboard, res.metadata)"
+    "Vizro().build(dashboard).run()"
    ]
   },
   {
